Use HTML5 semantic tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	   <title>Urbank - Best Bank Ever!</title>
 	</head>
 	<body>
-		<div class="header">
+		<nav class="header">
 			<span class="logo">
 				<img src="images/logo.png" alt="URBank logo"/>
 			</span>
@@ -17,10 +17,10 @@
 				<button class="headOption" href="#">Services</button>
 				<button class="headOption" href="#">Contact</button>
 			</span>
-		</div>
+		</nav>
 
-		<div class="body-container">
-			<div class="mainContent">
+		<main class="body-container">
+			<section class="mainContent">
 				<h1 class="mainHeader">Best Bank Ever!</h1>
 				<p class="mainBody">Bacon ipsum dolor amet sed voluptate in bresaola corned beef. Aute alcatra pancetta meatball jerky leberkas cillum deserunt. <a href="#">Fatback deserunt capicola</a> salami. Chuck ex quis nostrud meatball, capicola shankle <a href="#">meatloaf pariatur</a> burgdoggen in doner alcatra swine tempor. Eiusmod ea aliqua, rump kevin cupidatat sausage fugiat culpa corned beef tongue. Dolor short loin swine tri-tip tempor.</p>
 				<p class="reasonList">Reasons we're awesome:</p>
@@ -37,10 +37,9 @@
 					<p>Bacon ipsum dolor amet sed voluptate in bresaola corned beef. Aute alcatra pancetta meatball jerky leberkas cillum deserunt. Fatback deserunt capicola salami.</p>
 					<img src="images/mobile.png" alt="" />
 				</div>
+			</section>
 
-			</div>
-
-			<div class="sidebar">
+			<section class="sidebar">
 				<button type="button" class="loginBtn">Login</button>
 
 				<div id="loginModal" class="modal">
@@ -86,17 +85,17 @@
 				  <p><a href="#"> Short ribs tenderloin</a></p>
 				</div>
 
-			</div>
+			</section>
 
-			<div class="grid">
+			<section class="grid">
 				<h2 class="gridHeader">Rates <span class="gridHead2">Check them out.</span></h2>
 				<table class="gridTable">
 				</table>
 				<p>*Based on a $50,000 deposit.</p>
-			</div>
-		</div>
+			</section>
+		</main>
 
-		<div class="footer">
+		<footer>
 			<p class="copyright">&copy; 2014 URBank</p>
 			<span class="footerLinks">
 				<button href="#">Home</button>
@@ -105,7 +104,7 @@
 				<button href="#">Services</button>
 				<button href="#">Contact</button>
 			</span>
-		</div>
+		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
